# dotherside-haskell

./: CHANGELOG.md  README.md  dotherside.cabal  hypothetical-syntax.md
app/: Main.hs
example/: Makefile  application.qml  hello  hello.c  hello.qml  main.c  window.qml
example/qml/: dev.qml  main.qml
src/: DOtherSide.hs  Qml.hs
src/DOtherSide/: Context.hs
src/Qml/: QApplication.hs  QGuiApplication.hs  QQmlApplicationEngine.hs  QQuickView.hs  QUrl.hs  Raw.hs  Types.hs
src/Qml/Raw/: Context.hs  QApplication.hs  QGuiApplication.hs  QQmlApplicationEngine.hs  QQuickView.hs  QUrl.hs
