cabal-version:      3.4
name:               dotherside
version:            0.1.0.0
synopsis:           Haskell bindings to DOtherSide
-- description:
license:            MIT
license-file:       LICENSE
author:             Edwin Marshall
maintainer:         emarshall85@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
    import:           warnings
    exposed-modules: 
      DOtherSide
      DOtherSide.Context
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.1.0
      , inline-c
      , containers
    hs-source-dirs:   src
    cc-options: -Wall -O2
    extra-libraries: DOtherSide
    default-language: GHC2021

executable example
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
      base ^>=4.17.1.0
    , text
    , dotherside


test-suite dotherside-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.1.0
      , dotherside
